--- a/template/index.html
+++ b/template/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <title>{{ name }}</title>
+    <link rel="stylesheet" href="/dist/style.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/app.js"></script>
+    <script src="/dist/main.js"></script>
   </body>
 </html>
